impl - fix for letter spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,9 @@ body {
 .chart-label {
   text-align: center;
 }
+.label {
+  letter-spacing: normal !important;
+}
 html,
 #root {
   width: 100%;
