--- a/src/styles/Transaction.scss
+++ b/src/styles/Transaction.scss
@@ -225,8 +225,10 @@ label.MuiFormLabel-root.MuiInputLabel-root.MuiInputLabel-formControl.MuiInputLab
       background-color: #5b6b88;
       color: #fff;
       padding: 0.75rem;
+      font-size: 14px;
       .label {
         color: #fff;
+        letter-spacing: normal;
       }
       .label-data {
         font-size: 13px;
