--- a/src/styles/Vault.scss
+++ b/src/styles/Vault.scss
@@ -102,6 +102,7 @@ span.MuiTypography-root.MuiFormControlLabel-label {
     .label {
       color: #fff;
       font-size: 14px;
+      letter-spacing: normal;
     }
     .label-data {
       font-size: 12px;
